--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   @@include("_blocks/head/head.html")
   @@include("_blocks/polyfills/modernizr.html")
 </head>
-<body>>
+<body>
   @@include("_blocks/header/header.html")
   @@include("_blocks/footer/footer.html")
 
