--- a/src/_blocks/header/header.html
+++ b/src/_blocks/header/header.html
@@ -1,3 +1,28 @@
 <header class="header">
-
+  <section class="header__logo">
+    <h1 class="header__logo-title">Brand</h1>
+    <p class="header__logo-text">ly</p>
+  </section>
+  <section class="header__menu">
+    <ul class="header__menu-nav">
+      <li class="header__menu-item">
+        <a class="header__menu-home" href="#">Home</a>
+      </li>
+      <li class="header__menu-item">
+        <a class="header__menu-shop" href="#">Shop</a>
+      </li>
+      <li class="header__menu-item">
+        <a class="header__menu-brands" href="#">Brands</a>
+      </li>
+      <li class="header__menu-item">
+        <a class="header__menu-blog" href="#">Blog</a>
+      </li>
+      <li class="header__menu-item">
+        <a class="header__menu-about" href="#">About</a>
+      </li>
+      <li class="header__menu-item">
+        <a class="header__menu-contact" href="#">Contact</a>
+      </li>
+    </ul>
+  </section>
 </header>
