--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   @@include("_blocks/header/header.html")
+  @@include("_blocks/header_slider/header_slider.html")
   @@include("_blocks/footer/footer.html")
 
   @@include("_blocks/polyfills/polyfills.html")
