добавляет блок promo_slider, нарезка изображения, подготовка блоков и их подключение.

--- a/src/_blocks/head/head.html
+++ b/src/_blocks/head/head.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="/css/main.css">
 
   <link rel="mask-icon" href="/favicon.svg" color="#121212">
-  <link rel="manifest" href="/manifest.json">
+  <!-- <link rel="manifest" href="/manifest.json"> -->
   <meta name="theme-color" content="#121212" />
   <!-- ------------------------------- -->
 
@@ -53,7 +53,7 @@
   <meta name="twitter:url" property="og:url" content="http://rise19.com">
   <meta name="twitter:description" property="og:description" content="We are an outsourcing company that provides outsource web support services and outsource web specialists. Also, we create data-driven solutions for big and small business using the tools of machine learning and data mining.."><!-- Описание -->
   <meta name="twitter:image" property="og:image" content="/img/og/rise19.jpg">
-  <link rel="image_src" href="/img/og/rise19.jpg"><!-- 1111111111111111111 -->
+  <!-- <link rel="image_src" href="/img/og/rise19.jpg"> -->
   <!-- Путь к картинке -->
   <!-- -------------------------------- -->
 
