--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
   @@include("_blocks/header/header.html")
-  @@include("_blocks/header_slider/header_slider.html")
+  @@include("_blocks/promo_slider/promo_slider.html")
+  @@include("_blocks/products/products.html")
+  @@include("_blocks/trending/trending.html")
+  @@include("_blocks/blog/blog.html")
+  @@include("_blocks/subscribe/subscribe.html")
+
   @@include("_blocks/footer/footer.html")
 
   @@include("_blocks/polyfills/polyfills.html")
