add block  products

--- a/src/_blocks/products/products.html
+++ b/src/_blocks/products/products.html
@@ -1,3 +1,26 @@
 <section class="products">
-  
+  <p class="products__title">
+    Latest Products
+  </p>
+  <div class="products__list">
+    <ul class="products__list-type">
+      <li class="products__list-item products__list-item--men">
+        <p class="products__list-name">Men</p>
+      </li>
+      <li class="products__list-item products__list-item--woman">
+        <p class="products__list-name">Woman</p>
+      </li>
+      <li class="products__list-item products__list-item--watches">
+        <p class="products__list-name">Watches</p>
+      </li>
+    </ul>
+    <ul class="products__list-info">
+      <li class="products__list-sentence products__list-sentence--off">
+        <p class="products__list-text products__list-text--off">40% Off New Autumn Collection</p>
+      </li>
+      <li class="products__list-sentence products__list-sentence--sale">
+        <p class="products__list-text products__list-text--sale">MEGA SALE<br class="products__list-br"> ON ITEMS FROM SPIRIT COLLECTION</p>
+      </li>
+    </ul>
+  </div>
 </section>
