finished creating all the basic elements of the page

--- a/src/_blocks/footer/footer.html
+++ b/src/_blocks/footer/footer.html
@@ -1,1 +1,13 @@
-<footer class="footer"></footer>
+<footer class="footer">
+  <p class="footer-text">Made with
+    <span>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="22px" height="16px">
+        <path fill-rule="evenodd"  fill="rgb(220, 0, 0)"
+        d="M17.728,0.423 C15.227,-0.634 12.369,0.323 11.000,2.560 C9.631,0.323 6.773,-0.634 4.272,0.423 C1.533,1.581 0.262,4.716 1.432,7.426 C2.592,10.113 10.859,15.907 10.998,16.004 C10.998,16.005 10.998,16.007 10.998,16.007 C10.998,16.007 11.000,16.006 11.000,16.006 C11.000,16.006 11.001,16.007 11.001,16.007 C11.001,16.007 11.002,16.005 11.002,16.004 C11.141,15.907 19.408,10.113 20.568,7.426 C21.738,4.716 20.467,1.581 17.728,0.423 Z"/>
+      </svg>
+    </span> by WebDonut.net
+  </p>
+</footer>
