--- a/src/_blocks/header/header.html
+++ b/src/_blocks/header/header.html
@@ -16,7 +16,7 @@
           <a class="header__menu-brands" href="#">Brands</a>
         </li>
         <li class="header__menu-item">
-          <a class="header__menu-blog" href="#">Blog</a>
+          <a class="header__menu-blog" href="#blog">Blog</a>
         </li>
         <li class="header__menu-item">
           <a class="header__menu-about" href="#">About</a>
@@ -27,4 +27,27 @@
       </ul>
     </section>
   </div>
+
+  <section class="header-burger">
+    <div class="header-burger__logo-wrapper">
+      <div class="header-burger__logo">
+        <h3 class="header-burger__logo-title">Brand</h3>
+        <p class="header-burger__logo-text">ly</p>
+      </div>
+      <div id="header-menuToggle">
+        <input type="checkbox">
+        <span id="header-span1"></span>
+        <span id="header-span2"></span>
+        <span id="header-span3"></span>
+      </div>
+    </div>
+    <ul class="active burger-menu">
+      <li class="burger-menu__button"><a class="burger-menu__item" href="#">Home</a></li>
+      <li class="burger-menu__button"><a class="burger-menu__item" href="#">Shop</a></li>
+      <li class="burger-menu__button"><a class="burger-menu__item" href="#">Brands</a></li>
+      <li class="burger-menu__button"><a class="burger-menu__item" href="#">Blog</a></li>
+      <li class="burger-menu__button"><a class="burger-menu__item" href="#">About</a></li>
+      <li class="burger-menu__button"><a class="burger-menu__item" href="#">Contact</a></li>
+    </ul>
+  </section>
 </header>
