Добавляет правки по верстке

--- a/src/_blocks/subscribe/subscribe.html
+++ b/src/_blocks/subscribe/subscribe.html
@@ -1,5 +1,5 @@
-<section class="subscribe">
-  <div class="subscribe-wrapper">
+<div class="subscribe">
+  <section class="subscribe-wrapper">
     <h3 class="subscribe-title">SUBSCRIBE TO OUR NEWSLETTER TO RECEIVE LATEST NEWS AND OFFERS</h3>
     <form class="subscribe-form" action="#" method="GET">
       <input class="subscribe-form__email" type="text" name="email" id="email" placeholder="EMAIL ADDRESS" required>
@@ -15,5 +15,5 @@
         subscribe
       </button>
     </form>
-  </div>
-</section>
+  </section>
+</div>
