--- a/src/_blocks/header/header.html
+++ b/src/_blocks/header/header.html
@@ -1,5 +1,5 @@
-<header class="header-wrapper">
-  <div class="header">
+<header class="header">
+  <div class="header-wrapper">
     <section class="header__logo">
       <h3 class="header__logo-title">Brand</h3>
       <p class="header__logo-text">ly</p>
