--- a/src/_blocks/trending/trending.html
+++ b/src/_blocks/trending/trending.html
@@ -1,33 +1,33 @@
-<section class="trending">
+<div class="trending">
   <div class="trending__wrapper">
     <p class="trending__title">Trending Items</p>
     <div class="trending-slider">
-      <div class="trending-slider__foto">
+      <section class="trending-slider__foto">
         <picture>
           <img src="../../img/trending/trending-jacket.jpg" alt="jacket" width="570" height="570">
         </picture>
-      </div>
-      <div class="trending-slider__block-info">
-        <ul class="trending-slider__info">
-          <li class="trending-slider__info-title">
+      </section>
+      <section class="trending-slider__block-info">
+        <article class="trending-slider__info">
+          <h3 class="trending-slider__info-title">
             NATHAN STEWART JACKET
-          </li>
-          <li class="trending-slider__info-text trending-slider__info-text--subtitle">
+          </h3>
+          <p class="trending-slider__info-collection">
             Summer/Autumn Collection
-          </li>
-          <li class="trending-slider__info-text trending-slider__info-text--text">
+          </p>
+          <p class="trending-slider__info-description">
             Classic Nathan Stewart Jacket from his latest collection.
             This item is loved by many just because of it’s simle style.
             Simple lines,lovely texture,it suits almost everybody.
             It comes in six different colors,and all sizes.
-          </li>
-          <li class="trending-slider__info-text trending-slider__info-text--tip">
+          </p>
+          <p class="trending-slider__info-advice">
             FASHION TIP:
-          </li>
-          <li class="trending-slider__info-text trending-slider__info-text--tiptext">
+          </p>
+          <p class="trending-slider__info-comment">
             With this jacket,Nathan Stewart sunglasses go hand in hand!
-          </li>
-        </ul>
+          </p>
+        </article>
         <div class="trending-slider__button">
           <div class="trending-slider__button-wrapper">
             <button class="trending-slider__button-type trending-slider__button-type--size">M</button>
@@ -40,7 +40,7 @@
             <button class="trending-slider__button-type trending-slider__button-type--active">size guide</button>
           </div>
         </div>
-      </div>
+      </section>
     </div>
     <div class="trending__button">
       <button class="trending__button-element"></button>
@@ -49,4 +49,4 @@
       <button class="trending__button-element"></button>
     </div>
   </div>
-</section>
+</div>
