пробные варианты адаптива, завершил первые три блока

--- a/src/_blocks/products/products.html
+++ b/src/_blocks/products/products.html
@@ -16,7 +16,7 @@
     </ul>
     <ul class="products__list-info">
       <li class="products__list-sentence products__list-sentence--off">
-        <p class="products__list-text products__list-text--off">40% Off New Autumn Collection</p>
+        <p class="products__list-text products__list-text--off">40% Off<br> New Autumn Collection</p>
       </li>
       <li class="products__list-sentence products__list-sentence--sale">
         <p class="products__list-text products__list-text--sale">MEGA SALE<br class="products__list-br"> ON ITEMS FROM SPIRIT COLLECTION</p>
