--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   @@include("_blocks/promo_slider/promo_slider.html")
   @@include("_blocks/products/products.html")
   @@include("_blocks/trending/trending.html")
-  <!-- @@include("_blocks/blog/blog.html") -->
+  @@include("_blocks/blog/blog.html")
   <!-- @@include("_blocks/subscribe/subscribe.html") -->
 
   <!-- @@include("_blocks/footer/footer.html") -->
