адаптив blog, но я так и не понял, как поступить с стрелками слайдера.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   @@include("_blocks/products/products.html")
   @@include("_blocks/trending/trending.html")
   @@include("_blocks/blog/blog.html")
-  <!-- @@include("_blocks/subscribe/subscribe.html") -->
+  @@include("_blocks/subscribe/subscribe.html")
 
   <!-- @@include("_blocks/footer/footer.html") -->
 
