адаптив сделал, нужно порешать пару проблем

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   @@include("_blocks/blog/blog.html")
   @@include("_blocks/subscribe/subscribe.html")
 
-  <!-- @@include("_blocks/footer/footer.html") -->
+  @@include("_blocks/footer/footer.html")
 
   @@include("_blocks/polyfills/polyfills.html")
   <!-- @@include("_blocks/bottom/bottom.html") -->
