--- a/src/_blocks/promo_slider/promo_slider.html
+++ b/src/_blocks/promo_slider/promo_slider.html
@@ -1,5 +1,47 @@
 <section class="promo-slider">
-  <div class="promo-slider__title-wrapper">
+  <div class="promo-slider__title-wrapper promo-slider__title-first">
+    <h1 class="promo-slider__title">
+      Spring / Summer Collection
+    </h1>
+    <h2 class="promo-slider__title-discount">
+      UP TO 60% DISCOUNT ON NEW ARRIVALS
+    </h2>
+    <p class="promo-slider__title-tagline">
+      TRENDING NEW ITEMS,FROM CREATORS AROUND THE WORLD
+    </p>
+    <a href="#" class="promo-slider__title-shop">
+      SHOP NOW
+    </a>
+  </div>
+  <div class="promo-slider__title-wrapper promo-slider__title-second">
+    <h1 class="promo-slider__title">
+      Spring / Summer Collection
+    </h1>
+    <h2 class="promo-slider__title-discount">
+      UP TO 60% DISCOUNT ON NEW ARRIVALS
+    </h2>
+    <p class="promo-slider__title-tagline">
+      TRENDING NEW ITEMS,FROM CREATORS AROUND THE WORLD
+    </p>
+    <a href="#" class="promo-slider__title-shop">
+      SHOP NOW
+    </a>
+  </div>
+  <div class="promo-slider__title-wrapper promo-slider__title-third">
+    <h1 class="promo-slider__title">
+      Spring / Summer Collection
+    </h1>
+    <h2 class="promo-slider__title-discount">
+      UP TO 60% DISCOUNT ON NEW ARRIVALS
+    </h2>
+    <p class="promo-slider__title-tagline">
+      TRENDING NEW ITEMS,FROM CREATORS AROUND THE WORLD
+    </p>
+    <a href="#" class="promo-slider__title-shop">
+      SHOP NOW
+    </a>
+  </div>
+  <div class="promo-slider__title-wrapper promo-slider__title-fourth">
     <h1 class="promo-slider__title">
       Spring / Summer Collection
     </h1>
