--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
   @@include("_blocks/footer/footer.html")
 
   @@include("_blocks/polyfills/polyfills.html")
-  <!-- @@include("_blocks/bottom/bottom.html") -->
+   @@include("_blocks/bottom/bottom.html")
 </body>
 </html>
