--- a/src/_blocks/bottom/bottom.html
+++ b/src/_blocks/bottom/bottom.html
@@ -1,9 +1,27 @@
-<!-- <script src="https://github.com/iamdustan/smoothscroll/blob/master/src/smoothscroll.js" defer></script> -->
-<!-- <script>document.createElement("picture");</script> -->
-<!-- <script src="/plugins/picturefill.min.js" async></script> -->
-<!-- <script defer src="node_modules/svgxuse/svgxuse.js"></script> -->
-<script src="/js/script.js"></script>
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8rYJiGsnqgeewkAdV6zIVqlEf5fsjzKY" defer></script> -->
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-<!-- <script src="/js/jq-script.js"></script> -->
-<script src="burger_menu.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="/plugins/slick.min.js"></script>
+
+
+<script>
+  $(document).ready(function () {
+    $('.prommo-slider').slick({
+      infinite: true,
+      dots: true,
+      speed: 2000,
+      slidesToShow: 1,
+      slidesToScroll: 1,
+      arrows: false,
+      dotsClass: "promo-slider__dots",
+      autoplay: true,
+      autoplaySpeed: 4000,
+      responsive: [
+        {
+          breakpoint: 768,
+          settings: {
+            dots: false
+          }
+        }
+      ]
+    });
+  });
+</script>
