Второй слайдер - trending

--- a/src/_blocks/trending/trending.html
+++ b/src/_blocks/trending/trending.html
@@ -1,173 +1,169 @@
 <div class="trending">
   <div class="trending__wrapper">
     <p class="trending__title">Trending Items</p>
-    <div class="trending-slider trending-slider__main">
-      <section class="trending-slider__foto">
-        <img src="img/trending/trending-jacket.jpg" alt="jacket" width="570" height="570">
-      </section>
-      <section class="trending-slider__block-info">
-        <article class="trending-slider__info">
-          <h3 class="trending-slider__info-title">
-            NATHAN STEWART JACKET
-          </h3>
-          <p class="trending-slider__info-collection">
-            Summer/Autumn Collection
-          </p>
-          <p class="trending-slider__info-description">
-            Classic Nathan Stewart Jacket from his latest collection.
-            This item is loved by many just because of it’s simle style.
-            Simple lines,lovely texture,it suits almost everybody.
-            It comes in six different colors,and all sizes.
-          </p>
-          <p class="trending-slider__info-advice">
-            FASHION TIP:
-          </p>
-          <p class="trending-slider__info-comment">
-            With this jacket,Nathan Stewart sunglasses go hand in hand!
-          </p>
-        </article>
-        <div class="trending-slider__button">
-          <div class="trending-slider__button-wrapper">
-            <button class="trending-slider__button-type trending-slider__button-type--size">M</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">L</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">XL</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">XXL</button>
+    <div class="trending-slider__slick">
+      <div class="trending-slider trending-slider__main">
+        <section class="trending-slider__foto">
+          <img src="img/trending/trending-jacket.jpg" alt="jacket" width="570" height="570">
+        </section>
+        <section class="trending-slider__block-info">
+          <article class="trending-slider__info">
+            <h3 class="trending-slider__info-title">
+              NATHAN STEWART JACKET
+            </h3>
+            <p class="trending-slider__info-collection">
+              Summer/Autumn Collection
+            </p>
+            <p class="trending-slider__info-description">
+              Classic Nathan Stewart Jacket from his latest collection.
+              This item is loved by many just because of it’s simle style.
+              Simple lines,lovely texture,it suits almost everybody.
+              It comes in six different colors,and all sizes.
+            </p>
+            <p class="trending-slider__info-advice">
+              FASHION TIP:
+            </p>
+            <p class="trending-slider__info-comment">
+              With this jacket,Nathan Stewart sunglasses go hand in hand!
+            </p>
+          </article>
+          <div class="trending-slider__button">
+            <div class="trending-slider__button-wrapper">
+              <button class="trending-slider__button-type trending-slider__button-type--size">M</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">L</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">XL</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">XXL</button>
+            </div>
+            <div class="trending-slider__button-action">
+              <button class="trending-slider__button-type trending-slider__button-type--active">shop now</button>
+              <button class="trending-slider__button-type trending-slider__button-type--active">size guide</button>
+            </div>
           </div>
-          <div class="trending-slider__button-action">
-            <button class="trending-slider__button-type trending-slider__button-type--active">shop now</button>
-            <button class="trending-slider__button-type trending-slider__button-type--active">size guide</button>
+        </section>
+      </div>
+      <div class="trending-slider trending-slider__second">
+        <section class="trending-slider__foto">
+          <picture>
+            <img src="/img/trending/trending-jacket1.jpg" alt="jacket" width="570" height="570">
+          </picture>
+        </section>
+        <section class="trending-slider__block-info">
+          <article class="trending-slider__info">
+            <h3 class="trending-slider__info-title">
+              biznesowa koszula slim fit spinki guzik
+            </h3>
+            <p class="trending-slider__info-collection">
+              Summer/Autumn Collection
+            </p>
+            <p class="trending-slider__info-description">
+              Classic Nathan Stewart Jacket from his latest collection.
+              This item is loved by many just because of it’s simle style.
+              Simple lines,lovely texture,it suits almost everybody.
+              It comes in six different colors,and all sizes.
+            </p>
+            <p class="trending-slider__info-advice">
+              FASHION TIP:
+            </p>
+            <p class="trending-slider__info-comment">
+              With this jacket,Nathan Stewart sunglasses go hand in hand!
+            </p>
+          </article>
+          <div class="trending-slider__button">
+            <div class="trending-slider__button-wrapper">
+              <button class="trending-slider__button-type trending-slider__button-type--size">M</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">L</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">XL</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">XXL</button>
+            </div>
+            <div class="trending-slider__button-action">
+              <button class="trending-slider__button-type trending-slider__button-type--active">shop now</button>
+              <button class="trending-slider__button-type trending-slider__button-type--active">size guide</button>
+            </div>
           </div>
-        </div>
-      </section>
-    </div>
-    <div class="trending-slider trending-slider__second">
-      <section class="trending-slider__foto">
-        <picture>
-          <img src="../../img/trending/trending-jacket.jpg" alt="jacket" width="570" height="570">
-        </picture>
-      </section>
-      <section class="trending-slider__block-info">
-        <article class="trending-slider__info">
-          <h3 class="trending-slider__info-title">
-            NATHAN STEWART JACKET
-          </h3>
-          <p class="trending-slider__info-collection">
-            Summer/Autumn Collection
-          </p>
-          <p class="trending-slider__info-description">
-            Classic Nathan Stewart Jacket from his latest collection.
-            This item is loved by many just because of it’s simle style.
-            Simple lines,lovely texture,it suits almost everybody.
-            It comes in six different colors,and all sizes.
-          </p>
-          <p class="trending-slider__info-advice">
-            FASHION TIP:
-          </p>
-          <p class="trending-slider__info-comment">
-            With this jacket,Nathan Stewart sunglasses go hand in hand!
-          </p>
-        </article>
-        <div class="trending-slider__button">
-          <div class="trending-slider__button-wrapper">
-            <button class="trending-slider__button-type trending-slider__button-type--size">M</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">L</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">XL</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">XXL</button>
+        </section>
+      </div>
+      <div class="trending-slider trending-slider__third">
+        <section class="trending-slider__foto">
+          <picture>
+            <img src="/img/trending/trending-jacket3.jpg" alt="jacket" width="570" height="570">
+          </picture>
+        </section>
+        <section class="trending-slider__block-info">
+          <article class="trending-slider__info">
+            <h3 class="trending-slider__info-title">
+              Biznesowa koszula slim fit chabrowa
+            </h3>
+            <p class="trending-slider__info-collection">
+              Summer/Autumn Collection
+            </p>
+            <p class="trending-slider__info-description">
+              Classic Nathan Stewart Jacket from his latest collection.
+              This item is loved by many just because of it’s simle style.
+              Simple lines,lovely texture,it suits almost everybody.
+              It comes in six different colors,and all sizes.
+            </p>
+            <p class="trending-slider__info-advice">
+              FASHION TIP:
+            </p>
+            <p class="trending-slider__info-comment">
+              With this jacket,Nathan Stewart sunglasses go hand in hand!
+            </p>
+          </article>
+          <div class="trending-slider__button">
+            <div class="trending-slider__button-wrapper">
+              <button class="trending-slider__button-type trending-slider__button-type--size">M</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">L</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">XL</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">XXL</button>
+            </div>
+            <div class="trending-slider__button-action">
+              <button class="trending-slider__button-type trending-slider__button-type--active">shop now</button>
+              <button class="trending-slider__button-type trending-slider__button-type--active">size guide</button>
+            </div>
           </div>
-          <div class="trending-slider__button-action">
-            <button class="trending-slider__button-type trending-slider__button-type--active">shop now</button>
-            <button class="trending-slider__button-type trending-slider__button-type--active">size guide</button>
+        </section>
+      </div>
+      <div class="trending-slider trending-slider__fourth">
+        <section class="trending-slider__foto">
+          <picture>
+            <img src="/img/trending/trending-jacket4.jpg" alt="jacket" width="570" height="570">
+          </picture>
+        </section>
+        <section class="trending-slider__block-info">
+          <article class="trending-slider__info">
+            <h3 class="trending-slider__info-title">
+              Koszula Męska, Długim Rękawem
+            </h3>
+            <p class="trending-slider__info-collection">
+              Summer/Autumn Collection
+            </p>
+            <p class="trending-slider__info-description">
+              Classic Nathan Stewart Jacket from his latest collection.
+              This item is loved by many just because of it’s simle style.
+              Simple lines,lovely texture,it suits almost everybody.
+              It comes in six different colors,and all sizes.
+            </p>
+            <p class="trending-slider__info-advice">
+              FASHION TIP:
+            </p>
+            <p class="trending-slider__info-comment">
+              With this jacket,Nathan Stewart sunglasses go hand in hand!
+            </p>
+          </article>
+          <div class="trending-slider__button">
+            <div class="trending-slider__button-wrapper">
+              <button class="trending-slider__button-type trending-slider__button-type--size">M</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">L</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">XL</button>
+              <button class="trending-slider__button-type trending-slider__button-type--size">XXL</button>
+            </div>
+            <div class="trending-slider__button-action">
+              <button class="trending-slider__button-type trending-slider__button-type--active">shop now</button>
+              <button class="trending-slider__button-type trending-slider__button-type--active">size guide</button>
+            </div>
           </div>
-        </div>
-      </section>
-    </div>
-    <div class="trending-slider trending-slider__third">
-      <section class="trending-slider__foto">
-        <picture>
-          <img src="../../img/trending/trending-jacket.jpg" alt="jacket" width="570" height="570">
-        </picture>
-      </section>
-      <section class="trending-slider__block-info">
-        <article class="trending-slider__info">
-          <h3 class="trending-slider__info-title">
-            NATHAN STEWART JACKET
-          </h3>
-          <p class="trending-slider__info-collection">
-            Summer/Autumn Collection
-          </p>
-          <p class="trending-slider__info-description">
-            Classic Nathan Stewart Jacket from his latest collection.
-            This item is loved by many just because of it’s simle style.
-            Simple lines,lovely texture,it suits almost everybody.
-            It comes in six different colors,and all sizes.
-          </p>
-          <p class="trending-slider__info-advice">
-            FASHION TIP:
-          </p>
-          <p class="trending-slider__info-comment">
-            With this jacket,Nathan Stewart sunglasses go hand in hand!
-          </p>
-        </article>
-        <div class="trending-slider__button">
-          <div class="trending-slider__button-wrapper">
-            <button class="trending-slider__button-type trending-slider__button-type--size">M</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">L</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">XL</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">XXL</button>
-          </div>
-          <div class="trending-slider__button-action">
-            <button class="trending-slider__button-type trending-slider__button-type--active">shop now</button>
-            <button class="trending-slider__button-type trending-slider__button-type--active">size guide</button>
-          </div>
-        </div>
-      </section>
-    </div>
-    <div class="trending-slider trending-slider__fourth">
-      <section class="trending-slider__foto">
-        <picture>
-          <img src="../../img/trending/trending-jacket.jpg" alt="jacket" width="570" height="570">
-        </picture>
-      </section>
-      <section class="trending-slider__block-info">
-        <article class="trending-slider__info">
-          <h3 class="trending-slider__info-title">
-            NATHAN STEWART JACKET
-          </h3>
-          <p class="trending-slider__info-collection">
-            Summer/Autumn Collection
-          </p>
-          <p class="trending-slider__info-description">
-            Classic Nathan Stewart Jacket from his latest collection.
-            This item is loved by many just because of it’s simle style.
-            Simple lines,lovely texture,it suits almost everybody.
-            It comes in six different colors,and all sizes.
-          </p>
-          <p class="trending-slider__info-advice">
-            FASHION TIP:
-          </p>
-          <p class="trending-slider__info-comment">
-            With this jacket,Nathan Stewart sunglasses go hand in hand!
-          </p>
-        </article>
-        <div class="trending-slider__button">
-          <div class="trending-slider__button-wrapper">
-            <button class="trending-slider__button-type trending-slider__button-type--size">M</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">L</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">XL</button>
-            <button class="trending-slider__button-type trending-slider__button-type--size">XXL</button>
-          </div>
-          <div class="trending-slider__button-action">
-            <button class="trending-slider__button-type trending-slider__button-type--active">shop now</button>
-            <button class="trending-slider__button-type trending-slider__button-type--active">size guide</button>
-          </div>
-        </div>
-      </section>
-    </div>
-    <div class="trending__button">
-      <button class="trending__button-element"></button>
-      <button class="trending__button-element"></button>
-      <button class="trending__button-element"></button>
-      <button class="trending__button-element"></button>
+        </section>
+      </div>
     </div>
   </div>
 </div>
