добавляет слайдер в блоке blog

--- a/src/_blocks/bottom/bottom.html
+++ b/src/_blocks/bottom/bottom.html
@@ -1,59 +1,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="/plugins/slick.min.js"></script>
+<script src="/js/script.js"></script>
+<script src="/js/jq-script.js"></script>
 
-
-<script>
-  $(document).ready(function () {
-    $('.prommo-slider').slick({
-      infinite: true,
-      dots: true,
-      speed: 2000,
-      slidesToShow: 1,
-      slidesToScroll: 1,
-      arrows: false,
-      dotsClass: "promo-slider__dots",
-      autoplay: true,
-      autoplaySpeed: 4000,
-      responsive: [
-        {
-          breakpoint: 768,
-          settings: {
-            dots: false
-          }
-        }
-      ]
-    });
-
-
-    $('.trending-slider__slick').slick({
-      infinite: true,
-      dots: true,
-      speed: 700,
-      slidesToShow: 1,
-      slidesToScroll: 1,
-      arrows: false,
-      dotsClass: "trending__dots",
-      autoplay: false,
-      autoplaySpeed: 4000,
-      responsive: [
-        {
-          breakpoint: 768,
-          settings: {
-            dots: false
-          }
-        }
-      ]
-    });
-
-
-    $('.blog-slider').slick({
-      infinite: true,
-      dots: false,
-      speed: 700,
-      slidesToShow: 2,
-      slidesToScroll: 2
-    });
-
-    $('article.slick-initialized').css('flexDirection', 'column');
-  });
-</script>
