Изменения в блоке promo-slider

--- a/src/_blocks/promo_slider/promo_slider.html
+++ b/src/_blocks/promo_slider/promo_slider.html
@@ -1,5 +1,8 @@
 <div class="prommo-slider">
   <div class="promo-slider__wrapper">
+    <div class="promo-slider__image">
+      <img src="/img/promo_slider/promo_slider_woman.png" alt="woman">
+    </div>
     <div class="promo-slider__title-wrapper">
       <h1 class="promo-slider__title">
         Spring / Summer Collection
@@ -15,7 +18,10 @@
       </a>
     </div>
   </div>
-  <div class="promo-slider__wrapper promo-slider__wrapper-first">
+  <div class="promo-slider__wrapper">
+    <div class="promo-slider__image">
+      <img src="/img/promo_slider/promo_slider_woman1.jpg" alt="woman">
+    </div>
     <div class="promo-slider__title-wrapper">
       <h1 class="promo-slider__title">
         Spring / Summer Collection
@@ -31,7 +37,10 @@
       </a>
     </div>
   </div>
-  <div class="promo-slider__wrapper promo-slider__wrapper-second">
+  <div class="promo-slider__wrapper">
+    <div class="promo-slider__image">
+      <img src="/img/promo_slider/promo_slider_woman2.jpg" alt="woman">
+    </div>
     <div class="promo-slider__title-wrapper">
       <h1 class="promo-slider__title">
         Spring / Summer Collection
@@ -47,7 +56,10 @@
       </a>
     </div>
   </div>
-  <div class="promo-slider__wrapper promo-slider__wrapper-third">
+  <div class="promo-slider__wrapper">
+    <div class="promo-slider__image">
+      <img src="/img/promo_slider/promo_slider_woman3.jpg" alt="woman">
+    </div>
     <div class="promo-slider__title-wrapper">
       <h1 class="promo-slider__title">
         Spring / Summer Collection
