добавляет бургер меню

--- a/src/_blocks/header/header.html
+++ b/src/_blocks/header/header.html
@@ -27,24 +27,34 @@
       </ul>
     </section>
     <section class="header-burger">
-      <span class="header-burger__open">
-        <svg class="header-burger__open-btn"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          width="48px" height="28px">
-          <path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
-          d="M47.000,28.000 L1.000,28.000 C0.448,28.000 -0.000,27.552 -0.000,27.000 L-0.000,25.524 C-0.000,24.972 0.448,24.524 1.000,24.524 L47.000,24.524 C47.552,24.524 48.000,24.972 48.000,25.524 L48.000,27.000 C48.000,27.552 47.552,28.000 47.000,28.000 ZM47.000,15.726 L1.000,15.726 C0.448,15.726 -0.000,15.278 -0.000,14.726 L-0.000,13.274 C-0.000,12.722 0.448,12.274 1.000,12.274 L47.000,12.274 C47.552,12.274 48.000,12.722 48.000,13.274 L48.000,14.726 C48.000,15.278 47.552,15.726 47.000,15.726 ZM47.000,3.500 L1.000,3.500 C0.448,3.500 -0.000,3.052 -0.000,2.500 L-0.000,1.000 C-0.000,0.448 0.448,-0.000 1.000,-0.000 L47.000,-0.000 C47.552,-0.000 48.000,0.448 48.000,1.000 L48.000,2.500 C48.000,3.052 47.552,3.500 47.000,3.500 Z"/>
-        </svg>
-      </span>
-      <span class="header-burger__close">
-        <svg class="header-burger__close-btn"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          width="31px" height="30px">
-          <path fill-rule="evenodd"  fill="rgb(174, 174, 174)"
-          d="M30.994,28.630 L29.585,29.993 L15.500,16.363 L1.414,29.993 L0.006,28.630 L14.091,14.999 L0.006,1.369 L1.414,0.005 L15.500,13.636 L29.585,0.005 L30.994,1.369 L16.909,14.999 L30.994,28.630 Z"/>
-         </svg>
-      </span>
+      <input type="checkbox" />
+      <span id="span1"></span>
+      <span id="span2"></span>
+      <span id="span3"></span>
     </section>
+    <div id="nav" class="navigation">
+      <div class="navigation__inner">
+        <ul class="header__menu-nav">
+          <li class="header__menu-item">
+            <a class="header__menu-home" href="#">Home</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-shop" href="#">Shop</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-brands" href="#">Brands</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-blog" href="#blog">Blog</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-about" href="#">About</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-contact" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </header>
