--- a/src/_blocks/promo_slider/promo_slider.html
+++ b/src/_blocks/promo_slider/promo_slider.html
@@ -1,7 +1,7 @@
 <div class="prommo-slider">
   <div class="promo-slider__wrapper">
     <div class="promo-slider__image">
-      <img src="/img/promo_slider/promo_slider_woman.png" alt="woman">
+      <img class="promo-slider__image-item" src="/img/promo_slider/promo_slider_woman.png" alt="woman">
     </div>
     <div class="promo-slider__title-wrapper">
       <h1 class="promo-slider__title">
@@ -20,7 +20,7 @@
   </div>
   <div class="promo-slider__wrapper">
     <div class="promo-slider__image">
-      <img src="/img/promo_slider/promo_slider_woman1.jpg" alt="woman">
+      <img class="promo-slider__image-item" src="/img/promo_slider/promo_slider_woman1.jpg" alt="woman">
     </div>
     <div class="promo-slider__title-wrapper">
       <h1 class="promo-slider__title">
@@ -39,7 +39,7 @@
   </div>
   <div class="promo-slider__wrapper">
     <div class="promo-slider__image">
-      <img src="/img/promo_slider/promo_slider_woman2.jpg" alt="woman">
+      <img class="promo-slider__image-item" src="/img/promo_slider/promo_slider_woman2.jpg" alt="woman">
     </div>
     <div class="promo-slider__title-wrapper">
       <h1 class="promo-slider__title">
@@ -58,7 +58,7 @@
   </div>
   <div class="promo-slider__wrapper">
     <div class="promo-slider__image">
-      <img src="/img/promo_slider/promo_slider_woman3.jpg" alt="woman">
+      <img class="promo-slider__image-item" src="/img/promo_slider/promo_slider_woman3.jpg" alt="woman">
     </div>
     <div class="promo-slider__title-wrapper">
       <h1 class="promo-slider__title">
